2009-01-16  Johnny Jacob  <johnnyjacob@gmail.com>

	** Fixes #567730.
	
	* src/Backends/EDS/EDSBackends.cs: In CreateTask, if it is a 'AllCategory'
	use the defaultCategory for adding.
	In AddCategory, Watch for IsSystem categories and cache it as 
	defaultCategory.

	* src/Backends/EDS/EDSCategory.cs: New property 'IsSytem' added.

2009-01-15  Johnny Jacob  <jjohnny@novell.com>

	** Basic code for updating task on remote server.
	
	* src/Backends/Hiveminder/service/Task.cs: Added ToString function.

	* src/Backends/Hiveminder/service/Hiveminder.cs: Added support for PUT commands.
	Added support for updating tasks.

	* src/Backends/Hiveminder/HmTask.cs: Update server when a field changes.
	* src/Backends/Hiveminder/HmBackend.cs: UpdateTask : Updates task on the
	remote server.

2009-01-06  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* RtmNet/Makefile.am: Use libdir instead of prefix/lib for RtmNet DLL. 
	Fixes bug #540983, patch courtesy of David Kaylor.
	
2008-12-28  Johnny Jacob  <johnnyjacob@gmail.com>

	* src/Backends/Hiveminder/HmBackend.cs: Add the created task to our store.
	
	* src/Backends/Hiveminder/service/Hiveminder.cs: Added 'CreateTask'.
	Added support for sending data in POST.

	* src/Backends/Hiveminder/service/Task.cs: Added 'urlEncoded' property.
	
2008-12-26  Brian G. Merrell <bgmerrell@gmail.com>

        * configure.ac: The comment for the Hiveminder section was mislabeled
        as SQLite, which propagates into the comments of the 'configure' file.
        No biggie.

2008-12-24  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* configure.ac:
	* src/Defines.WIN32.cs:
	* osx/Contents/Info.plist: Bump version to 0.1.9.

2008-12-24  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* NEWS: Updated for 0.1.8.

2008-12-24  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* src/Application.cs: DllImport system function from libc to open
	URLs, since the Process class is broken in OS X 10.4 and earlier
	(should be fixed when Mono 2.2 comes out).
